--- a/app/templates/doc1.html
+++ b/app/templates/doc1.html
@@ -41,14 +41,14 @@
 <tr><td>Гостиница:</td><td><input name='hotel' type='text' value="{{ the_hotel }}" placeholder='Lords Hotel' width='60'></td></tr>
 
 <tr><td colspan="2"; style="font-weight:bold; text-align: center;">Данные пассажиров</td><td></td>
-<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Работник, укаать данные если требуется билет</td><td></td>
+<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Работник, указать данные если требуется билет</td><td></td>
 <tr><td>Работник. First Name:</td><td><input name='rabotnik_name_lat1' type='text' value="{{ the_rabotnik_name_lat1 }}" placeholder='Ronald' width='60'></td></tr>
 <tr><td>Работник. Last Name:</td><td><input name='rabotnik_name_lat2' type='text' value="{{ the_rabotnik_name_lat2 }}" placeholder='Weasley ' width='60'></td></tr>
 <tr><td>Работник. Дата рождения:</td><td><input name='rabotnik_birthdate' type='text' value="{{ the_rabotnik_birthdate }}" placeholder='ДД.ММ.ГГГГ' width='60'></td></tr>
 <tr><td>Работник. N загранпаспорта:</td><td><input name='rabotnik_zagran' type='text' value="{{ the_rabotnik_zagran }}" placeholder='XXXXXXXXX' width='60'></td></tr>
 <tr><td>Работник. Срок действия загранпаспорта:</td><td><input name='rabotnik_zagran_srok' type='text' value="{{ the_rabotnik_zagran_srok }}" placeholder='ДД.ММ.ГГГГ' width='60'></td></tr>
 
-<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Супруг(а), укаать данные если требуется билет</td><td></td>
+<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Супруг(а), указать данные если требуется билет</td><td></td>
 <tr><td>Супруг(а). Фамилия:</td><td><input name='supruga_name1' type='text' value="{{ the_supruga_name1 }}" placeholder='Гермиона' width='60'></td></tr>
 <tr><td>Супруг(а). Имя:</td><td><input name='supruga_name2' type='text' value="{{ the_supruga_name2}}" placeholder='Грейнджер' width='60'></td></tr>
 <tr><td>Супруг(а). Отчество:</td><td><input name='supruga_name3' type='text' value="{{ the_supruga_name3 }}" placeholder='' width='60'></td></tr>
@@ -60,7 +60,7 @@
 <tr><td>Супруг(а). N свидетельства о регистрации брака:</td><td><input name='supruga_brak_number' type='text' value="{{ the_supruga_brak_number }}" placeholder='XXXXXXXX' width='60'></td></tr>
 <tr><td>Супруг(а). Дата свидетельства о регистрации брака:</td><td><input name='supruga_brak_data' type='text' value="{{ the_supruga_brak_data }}" placeholder='ДД.ММ.ГГГГ' width='60'></td></tr>
 
-<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Ребенок 1, укаать данные если требуется билет</td><td></td>
+<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Ребенок 1, указать данные если требуется билет</td><td></td>
 <tr><td>Ребенок1. Фамилия:</td><td><input name='child1_name1' type='text' value="{{ the_child1_name1 }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок1. Имя:</td><td><input name='child1_name2' type='text' value="{{ the_child1_name2 }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок1. Отчество:</td><td><input name='child1_name3' type='text' value="{{ the_child1_name3 }}" placeholder='' width='60'></td></tr>
@@ -72,7 +72,7 @@
 <tr><td>Ребенок1. N свидетельства о рождении:</td><td><input name='child1_svidetelstvo_number' type='text' value="{{ the_child1_svidetelstvo_number }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок1. Дата свидетельства о рождении:</td><td><input name='child1_svidetelstvo_data' type='text' value="{{ the_child1_svidetelstvo_data }}" placeholder='' width='60'></td></tr>
 
-<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Ребенок 2, укаать данные если требуется билет</td><td></td>
+<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Ребенок 2, указать данные если требуется билет</td><td></td>
 <tr><td>Ребенок2. Фамилия:</td><td><input name='child2_name1' type='text' value="{{ the_child2_name1 }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок2. Имя:</td><td><input name='child2_name2' type='text' value="{{ the_child2_name2 }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок2. Отчество:</td><td><input name='child2_name3' type='text' value="{{ the_child2_name3 }}" placeholder='' width='60'></td></tr>
@@ -84,7 +84,7 @@
 <tr><td>Ребенок2. N свидетельства о рождении:</td><td><input name='child2_svidetelstvo_number' type='text' value="{{ the_child2_svidetelstvo_number }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок2. Дата свидетельства о рождении:</td><td><input name='child2_svidetelstvo_data' type='text' value="{{ the_child2_svidetelstvo_data }}" placeholder='' width='60'></td></tr>
 
-<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Ребенок 3, укаать данные если требуется билет</td><td></td>
+<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Ребенок 3, указать данные если требуется билет</td><td></td>
 <tr><td>Ребенок3. Фамилия:</td><td><input name='child3_name1' type='text' value="{{ the_child3_name1 }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок3. Имя:</td><td><input name='child3_name2' type='text' value="{{ the_child3_name2 }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок3. Отчество:</td><td><input name='child3_name3' type='text' value="{{ the_child3_name3 }}" placeholder='' width='60'></td></tr>
@@ -96,7 +96,7 @@
 <tr><td>Ребенок3. N свидетельства о рождении:</td><td><input name='child3_svidetelstvo_number' type='text' value="{{ the_child3_svidetelstvo_number }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок3. Дата свидетельства о рождении:</td><td><input name='child3_svidetelstvo_data' type='text' value="{{ the_child3_svidetelstvo_data }}" placeholder='' width='60'></td></tr>
 
-<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Ребенок 4, укаать данные если требуется билет</td><td></td>
+<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Ребенок 4, указать данные если требуется билет</td><td></td>
 <tr><td>Ребенок4. Фамилия:</td><td><input name='child4_name1' type='text' value="{{ the_child4_name1 }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок4. Имя:</td><td><input name='child4_name2' type='text' value="{{ the_child4_name2 }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок4. Отчество:</td><td><input name='child4_name3' type='text' value="{{ the_child4_name3 }}" placeholder='' width='60'></td></tr>
@@ -108,7 +108,7 @@
 <tr><td>Ребенок4. N свидетельства о рождении:</td><td><input name='child4_svidetelstvo_number' type='text' value="{{ the_child4_svidetelstvo_number }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок4. Дата свидетельства о рождении:</td><td><input name='child4_svidetelstvo_data' type='text' value="{{ the_child4_svidetelstvo_data }}" placeholder='' width='60'></td></tr>
 
-<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Ребенок 5, укаать данные если требуется билет</td><td></td>
+<tr><td colspan="2"; style="font-weight:bold; text-align: center;">Ребенок 5, указать данные если требуется билет</td><td></td>
 <tr><td>Ребенок5. Фамилия:</td><td><input name='child5_name1' type='text' value="{{ the_child5_name1 }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок5. Имя:</td><td><input name='child5_name2' type='text' value="{{ the_child5_name2 }}" placeholder='' width='60'></td></tr>
 <tr><td>Ребенок5. Отчество:</td><td><input name='child5_name3' type='text' value="{{ the_child5_name3 }}" placeholder='' width='60'></td></tr>
